crates/executor/src/tests/sql/commands/snapshots/explain/query_explain_analyze_references_basic.snap
---
source: crates/executor/src/tests/sql/commands/explain.rs
assertion_line: 33
description: "\"EXPLAIN ANALYZE SELECT name FROM testing;\""
info: "Setup queries: CREATE OR REPLACE TABLE testing (name VARCHAR)\nAS SELECT * FROM VALUES\n  ('yes'),\n  ('no')"
---
Ok(
    [
        "+-------------------+----------------------------------------------------------------------------------------------------------------------------------+",
        "| plan_type         | plan                                                                                                    |",
        "+-------------------+----------------------------------------------------------------------------------------------------------------------------------+",
        "| Plan with Metrics | DataSourceExec: file_groups={1 group: [[/[PATH]/testing/data/[HEX]/[UUID].parquet]]}, projection=[name], file_type=parquet, metrics=[output_rows=2, elapsed_compute=[TIME], output_bytes=24.0 B, output_batches=1, files_ranges_pruned_statistics=1 total → 1 matched, row_groups_pruned_statistics=1 total → 1 matched, row_groups_pruned_bloom_filter=1 total → 1 matched, page_index_pages_pruned=0 total → 0 matched, page_index_rows_pruned=0 total → 0 matched, limit_pruned_row_groups=0 total → 0 matched, batches_split=0, bytes_scanned=71, file_open_errors=0, file_scan_errors=0, num_predicate_creation_errors=0, predicate_evaluation_errors=0, pushdown_rows_matched=0, pushdown_rows_pruned=0, predicate_cache_inner_records=0, predicate_cache_records=0, bloom_filter_eval_time=[TIME], metadata_load_time=[TIME], page_index_eval_time=[TIME], row_pushdown_eval_time=[TIME], statistics_eval_time=[TIME], time_elapsed_opening=[TIME], time_elapsed_processing=[TIME], time_elapsed_scanning_total=[TIME], time_elapsed_scanning_until_data=[TIME], scan_efficiency_ratio=13% (71/564)] |",
        "|                   |                                                                                                    |",
        "+-------------------+----------------------------------------------------------------------------------------------------------------------------------+",
    ],
)
