crates/executor/src/tests/sql/commands/snapshots/explain/query_explain_analyze_visitors_basic.snap
---
source: crates/executor/src/tests/sql/commands/explain.rs
assertion_line: 14
description: "\"EXPLAIN ANALYZE SELECT dateadd(day, 30, '20-12-2022');\""
---
Ok(
    [
        "+-------------------+----------------------------------------------------------------------------------------------------------------------------------+",
        "| plan_type         | plan                                                                                                    |",
        "+-------------------+----------------------------------------------------------------------------------------------------------------------------------+",
        "| Plan with Metrics | ProjectionExec: expr=[1674086400000000000 as dateadd(Utf8(\"day\"),Int64(30),Utf8(\"20-12-2022\"))], metrics=[output_rows=1, elapsed_compute=[TIME], output_bytes=8.0 B, output_batches=1, expr_0_eval_time=[TIME]] |",
        "|                   |   PlaceholderRowExec, metrics=[]                                                                                                    |",
        "|                   |                                                                                                    |",
        "+-------------------+----------------------------------------------------------------------------------------------------------------------------------+",
    ],
)
