crates/executor/src/tests/sql/commands/snapshots/explain/query_explain_references_basic.snap
---
source: crates/executor/src/tests/sql/commands/explain.rs
description: "\"EXPLAIN SELECT name FROM testing;\""
info: "Setup queries: CREATE OR REPLACE TABLE testing (name VARCHAR)\nAS SELECT * FROM VALUES\n  ('yes'),\n  ('no')"
---
Ok(
    [
        "+---------------+----------------------------------------------------------------------------------------------------------------------------------+",
        "| plan_type     | plan                                                                                                    |",
        "+---------------+----------------------------------------------------------------------------------------------------------------------------------+",
        "| logical_plan  | TableScan: testing projection=[name]                                                                                                    |",
        "| physical_plan | DataSourceExec: file_groups={1 group: [[/[PATH]/testing/data/[HEX]/[UUID].parquet]]}, projection=[name], file_type=parquet |",
        "|               |                                                                                                    |",
        "+---------------+----------------------------------------------------------------------------------------------------------------------------------+",
    ],
)
