crates/executor/src/tests/sql/commands/snapshots/explain/query_explain_visitors_basic.snap
---
source: crates/executor/src/tests/sql/commands/explain.rs
assertion_line: 8
description: "\"EXPLAIN SELECT dateadd(day, 30, '20-12-2022');\""
---
Ok(
    [
        "+---------------+-----------------------------------------------------------------------------------------------------------------+",
        "| plan_type     | plan                                                                                                    |",
        "+---------------+-----------------------------------------------------------------------------------------------------------------+",
        "| logical_plan  | Projection: TimestampNanosecond(1674086400000000000, None) AS dateadd(Utf8(\"day\"),Int64(30),Utf8(\"20-12-2022\")) |",
        "|               |   EmptyRelation: rows=1                                                                                         |",
        "| physical_plan | ProjectionExec: expr=[1674086400000000000 as dateadd(Utf8(\"day\"),Int64(30),Utf8(\"20-12-2022\"))]                 |",
        "|               |   PlaceholderRowExec                                                                                            |",
        "|               |                                                                                                    |",
        "+---------------+-----------------------------------------------------------------------------------------------------------------+",
    ],
)
